--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -111,6 +111,382 @@
           width="236"
         />
       </picture>
+      <!-- это свг для анимации -->
+      
+      <svg width="60" height="60" viewBox="0 0 100 100" id="onewhite">
+        <g class="group" opacity="0.8">
+          <g class="large">
+            <path
+              id="large"
+              d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                  L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+              fill="white"
+            />
+          </g>
+          <g class="large-2" transform="rotate(45)">
+            <use xlink:href="#large" />
+          </g>
+          <g class="small">
+            <path
+              id="small"
+              d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                        L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+              fill="white"
+            />
+          </g>
+        </g>
+      </svg>
+      <svg width="70" height="70" viewBox="0 0 100 100" id="twowhite">
+        <g class="group" opacity="0.8">
+          <g class="large">
+            <path
+              id="large"
+              d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                  L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+              fill="white"
+            />
+          </g>
+          <g class="large-2" transform="rotate(45)">
+            <use xlink:href="#large" />
+          </g>
+          <g class="small">
+            <path
+              id="small"
+              d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                        L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+              fill="white"
+            />
+          </g>
+        </g>
+      </svg>
+      </svg>
+    <svg width="70" height="70" viewBox="0 0 100 100" id="threewhite">
+      <g class="group" opacity="0.8">
+        <g class="large">
+          <path
+            id="large"
+            d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                  L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+            fill="white"
+          />
+        </g>
+        <g class="large-2" transform="rotate(45)">
+          <use xlink:href="#large" />
+        </g>
+        <g class="small">
+          <path
+            id="small"
+            d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                        L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+            fill="white"
+          />
+        </g>
+      </g>
+    </svg>
+    <svg width="70" height="70" viewBox="0 0 100 100" id="oneph">
+      <g class="group" opacity="0.8">
+        <g class="large">
+          <path
+            id="large"
+            d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+            fill="white"
+          />
+        </g>
+        <g class="large-2" transform="rotate(45)">
+          <use xlink:href="#large" />
+        </g>
+        <g class="small">
+          <path
+            id="small"
+            d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                      L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+            fill="white"
+          />
+        </g>
+      </g>
+    </svg>
+  
+    <svg width="70" height="70" viewBox="0 0 100 100" id="twoph">
+      <g class="group" opacity="0.8">
+        <g class="large">
+          <path
+            id="large"
+            d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+            fill="white"
+          />
+        </g>
+        <g class="large-2" transform="rotate(45)">
+          <use xlink:href="#large" />
+        </g>
+        <g class="small">
+          <path
+            id="small"
+            d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                      L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+            fill="white"
+          />
+        </g>
+      </g>
+    </svg>
+    <svg width="70" height="70" viewBox="0 0 100 100" id="threeph">
+      <g class="group" opacity="0.8">
+        <g class="large">
+          <path
+            id="large"
+            d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+            fill="white"
+          />
+        </g>
+        <g class="large-2" transform="rotate(45)">
+          <use xlink:href="#large" />
+        </g>
+        <g class="small">
+          <path
+            id="small"
+            d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                      L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+            fill="white"
+          />
+        </g>
+      </g>
+    </svg>
+
+    <svg width="70" height="70" viewBox="0 0 100 100" id="oneorange">
+      <g class="group" opacity="0.8">
+        <g class="large">
+          <path
+            id="large"
+            d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+            fill="white"
+          />
+        </g>
+        <g class="large-2" transform="rotate(45)">
+          <use xlink:href="#large" />
+        </g>
+        <g class="small">
+          <path
+            id="small"
+            d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                      L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+            fill="white"
+          />
+        </g>
+      </g>
+    </svg>
+
+    <svg width="70" height="70" viewBox="0 0 100 100" id="twoorange">
+      <g class="group" opacity="0.8">
+        <g class="large">
+          <path
+            id="large"
+            d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+            fill="white"
+          />
+        </g>
+        <g class="large-2" transform="rotate(45)">
+          <use xlink:href="#large" />
+        </g>
+        <g class="small">
+          <path
+            id="small"
+            d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                      L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+            fill="white"
+          />
+        </g>
+      </g>
+    </svg>
+    <svg width="80" height="80" viewBox="0 0 100 100" id="threeorange">
+      <g class="group" opacity="0.8">
+        <g class="large">
+          <path
+            id="large"
+            d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+            fill="white"
+          />
+        </g>
+        <g class="large-2" transform="rotate(45)">
+          <use xlink:href="#large" />
+        </g>
+        <g class="small">
+          <path
+            id="small"
+            d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                      L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+            fill="white"
+          />
+        </g>
+      </g>
+    </svg>
+    <svg width="70" height="70" viewBox="0 0 100 100" id="onegreen">
+      <g class="group" opacity="0.8">
+        <g class="large">
+          <path
+            id="large"
+            d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+            fill="white"
+          />
+        </g>
+        <g class="large-2" transform="rotate(45)">
+          <use xlink:href="#large" />
+        </g>
+        <g class="small">
+          <path
+            id="small"
+            d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                      L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+            fill="white"
+          />
+        </g>
+      </g>
+    </svg> 
+  <svg width="80" height="80" viewBox="0 0 100 100" id="twogreen">
+      <g class="group" opacity="0.8">
+        <g class="large">
+          <path
+            id="large"
+            d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+            fill="white"
+          />
+        </g>
+        <g class="large-2" transform="rotate(45)">
+          <use xlink:href="#large" />
+        </g>
+        <g class="small">
+          <path
+            id="small"
+            d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                      L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+            fill="white"
+          />
+        </g>
+      </g>
+    </svg>
+  <svg width="80" height="80" viewBox="0 0 100 100" id="oneyellow">
+      <g class="group" opacity="0.8">
+        <g class="large">
+          <path
+            id="large"
+            d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+            fill="white"
+          />
+        </g>
+        <g class="large-2" transform="rotate(45)">
+          <use xlink:href="#large" />
+        </g>
+        <g class="small">
+          <path
+            id="small"
+            d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                      L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+            fill="white"
+          />
+        </g>
+      </g>
+    </svg>
+  <svg width="80" height="80" viewBox="0 0 100 100" id="twoyellow">
+      <g class="group" opacity="0.8">
+        <g class="large">
+          <path
+            id="large"
+            d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+            fill="white"
+          />
+        </g>
+        <g class="large-2" transform="rotate(45)">
+          <use xlink:href="#large" />
+        </g>
+        <g class="small">
+          <path
+            id="small"
+            d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                      L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+            fill="white"
+          />
+        </g>
+      </g>
+    </svg>
+  <svg width="80" height="80" viewBox="0 0 100 100" id="onered">
+      <g class="group" opacity="0.8">
+        <g class="large">
+          <path
+            id="large"
+            d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+            fill="white"
+          />
+        </g>
+        <g class="large-2" transform="rotate(45)">
+          <use xlink:href="#large" />
+        </g>
+        <g class="small">
+          <path
+            id="small"
+            d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                      L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+            fill="white"
+          />
+        </g>
+      </g>
+    </svg>
+  <svg width="80" height="80" viewBox="0 0 100 100" id="twored">
+      <g class="group" opacity="0.8">
+        <g class="large">
+          <path
+            id="large"
+            d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+            fill="white"
+          />
+        </g>
+        <g class="large-2" transform="rotate(45)">
+          <use xlink:href="#large" />
+        </g>
+        <g class="small">
+          <path
+            id="small"
+            d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                      L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+            fill="white"
+          />
+        </g>
+      </g>
+    </svg>
+  <svg width="80" height="80" viewBox="0 0 100 100" id="threered">
+      <g class="group" opacity="0.8">
+        <g class="large">
+          <path
+            id="large"
+            d="M41.25,40 L42.5,10 L43.75,40 L45, 41.25 L75,42.5 L45,43.75
+                L43.75,45 L42.5,75 L41.25,45 L40,43.75 L10,42.5 L40,41.25z "
+            fill="white"
+          />
+        </g>
+        <g class="large-2" transform="rotate(45)">
+          <use xlink:href="#large" />
+        </g>
+        <g class="small">
+          <path
+            id="small"
+            d="M41.25,40 L42.5,25 L43.75,40 L45,41.25 L60,42.5 L45,43.75
+                      L43.75,45 L42.5,60 L41.25,45 L40,43.75 L25,42.5 L40,41.25z"
+            fill="white"
+          />
+        </g>
+      </g>
+    </svg>
+<!-- Закончились свг для анимации -->
+
     </div>
     <div class="info-milk">
       <p class="info-text">
