--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,6 +24,7 @@
 @import './layouts/footer';
 @import './layouts/modal-window';
 @import './layouts/order-form';
+@import './components/ice-shine';
 
 // @import "./base/common";
 // @import "./base/common";
