--- a/src/partials/galery.html
+++ b/src/partials/galery.html
@@ -1,4 +1,11 @@
 <section class="galery" id="galery">
+
+  <div class="mobile-galery">
+    <picture>
+      <source srcset="./images/mobile/galery@2x.webp" type="image/svg+xml" />
+      <img src="./images/mobile/galery@2x.jpg" alt="Dont worry be happy" width="320" height="200" />
+    </picture>
+  </div>
   <div class="container galery-container">
     <ul class="galery-list">
       <li class="galery-item">
