--- a/src/sass/_galery.scss
+++ b/src/sass/_galery.scss
@@ -1,8 +1,6 @@
 .galery {
   position: relative;
-  padding-bottom: 100px;
   z-index: 1000;
-
   @media screen and (min-width: 768px) {
     padding-bottom: 100px;
   }
@@ -10,23 +8,23 @@
     padding-bottom: 100px;
   }
 }
-
 .galery-container {
-  position: absolute;
-  top: -50%;
-  left: 0;
-  right: 0;
-  @media screen and (min-width: 400px) {
-    top: -75%;
-  }
+  display: none;
+  // @media screen and (min-width: 400px) {
+  //   top: -75%;
+  // }
   @media screen and (min-width: 768px) {
+    display: block;
+    position: absolute;
+    top: -50%;
+    left: 0;
+    right: 0;
     top: -110%;
   }
   @media screen and (min-width: 1200px) {
     top: -170%;
   }
 }
-
 .galery-img {
   max-width: 100%;
   border-radius: 5%;
@@ -37,7 +35,6 @@
     transform: scale(1.15);
   }
 }
-
 .galery-list {
   display: flex;
   align-items: center;
@@ -47,7 +44,6 @@
   width: calc((100% - 14px) / 7);
   &:not(:last-child) {
     margin-right: 2px;
-
     @media screen and (min-width: 768px) {
       margin-right: 4px;
     }
@@ -56,10 +52,8 @@
     }
   }
 }
-
 .top-img {
   margin-bottom: 2px;
-
   @media screen and (min-width: 768px) {
     margin-bottom: 4px;
   }
@@ -67,11 +61,15 @@
     margin-bottom: 7px;
   }
 }
-
 .girl {
   max-width: 50%;
 }
-
 .big-img {
   width: calc((100% - 14px) / 7 * 2);
+}
+
+.mobile-galery {
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
