--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,6 +1,8 @@
-.container .footer-css {
-  position: relative;
+.container-footer {
   padding-bottom: 25px;
+}
+.footer-css {
+  position: relative;
   background-color: $color-background-section;
   margin: 0;
 
@@ -37,6 +39,10 @@
 .fb-svg {
   width: 9px;
   height: 19px;
+}
+
+.container {
+  outline: 1px solid teal;
 }
 
 .social-icons-link {
@@ -111,14 +117,14 @@
 }
 
 @media screen and (min-width: $tablet) {
-  .container .footer-css {
-    padding-bottom: 18px;
+  .container-footer {
     padding-left: 36px;
     padding-right: 36px;
+    padding-bottom: 18px;
+  }
 
-    &::after {
-      top: 439px;
-    }
+  .footer-css::after {
+    top: 439px;
   }
 
   .footer-top {
@@ -192,14 +198,14 @@
 }
 
 @media screen and (min-width: $desktop) {
-  .container .footer-css {
+  .container-footer {
+    padding-left: 0;
+    padding-right: 0;
     padding-bottom: 10px;
-    margin-left: 114px;
-    padding-right: 121px;
+  }
 
-    &::after {
-      top: 377px;
-    }
+  .footer-css::after {
+    top: 377px;
   }
 
   .contact-footer {
@@ -208,10 +214,12 @@
 
   .ice-cream-description {
     margin-bottom: 106px;
+    padding-left: 114px;
   }
 
   .social-net {
     margin-bottom: 50px;
+    padding-right: 121px;
   }
 
   .social-icons-item:not(:last-child) {
@@ -221,6 +229,7 @@
   .call {
     font-size: 16px;
     line-height: 1.875%;
+    padding-right: 116px;
   }
 
   .small-letters {
