Добавила <footer id="#footer"

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer id="#footer" class="footer">
   <div class="container">
     <div class="footer-container">
       <div class="footer-heading">
