додає мод вікно

--- a/src/partials/neader-hero.html
+++ b/src/partials/neader-hero.html
@@ -23,7 +23,7 @@
                             <use href="././images/icons/sprite.svg#open-icon"></use>
                         </svg>
                     </button>
-                    <button type="button" class="btn2 buy-btn buy-btn--nmob">
+                    <button type="button" class="btn2 buy-btn buy-btn--nmob" data-modal-open>
                         Buy now
                         <svg class="right-icon">
                             <use href="././images/icons/sprite.svg#right-icon"></use>
@@ -37,7 +37,7 @@
                             <use href="././images/icons/sprite.svg#close-icon"></use>
                         </svg>
                     </button>
-                    <button type="button" class="btn2 buy-btn buy-btn--mob">
+                    <button type="button" class="btn2 buy-btn buy-btn--mob" mob-data-mod-open>
                         Buy now
                         <svg class="right-icon">
                             <use href="././images/icons/sprite.svg#right-icon"></use>
@@ -113,12 +113,147 @@
                
             
         </section>
+        <div class="backdrop is-hidden" data-modal>  
+            <div class="order">
+                <button type="button" class="btn-circle cross-icon cl-order-btn" data-modal-close>
+                    <svg class="cross-order_icon">
+                    <use href="././images/icons/sprite.svg#close-icon"></use>
+                    </svg>
+                </button> 
+                <h2 class="order_title">Your order</h2>
+                <form class="order_form">
+                    <label class="label label-name">
+                        <input
+                            type="text"
+                            name="client-name"
+                            class="client-data"
+                            placeholder="  "
+                        />
+                        <span class="label-descr">Name</span>
+                    </label>
+                    <label class="label label-tel">
+                        <input
+                            type="tel"
+                            name="client-tel"
+                            class="client-data"
+                            placeholder=" "
+                        />
+                        <span class="label-descr">Phone</span>              
+                    </label>
+                    <label class="label label-points">
+                        <input
+                            type="text"
+                            name="points-address"
+                            class="client-data"
+                            placeholder=" "
+                        />
+                        <span class="label-descr">Pick-up Points Address</span>              
+                    </label>
+                    <p class="order_text">Make your choise:</p>
+                    <div role="group" class="order-choise">
+                                         
+                        <label class="label order-choise_label">
+                            <input  name="product" type="checkbox" value="icecream" class="order-choise_check"/>
+                            <span class="order-choise_details">Ice-cream</span>
+                            <input  type="number" name="icecream-number" class="portions-number"/>
+                            <span class="order-choise_portions">Portions</span>
+                        </label>
+                        <label class="label order-choise_label">
+                            <input  name="product" type="checkbox" value="ice_coffee" class="order-choise_check"/>
+                            <span class="order-choise_details">Ice-coffe</span>
+                            <input  type="number" name="coffee-number" class="portions-number"/>
+                            <span class="order-choise_portions">Portions</span>
+                        </label>
+                        <label class="label order-choise_label">
+                            <input  name="product" type="checkbox" value="milkshakes" class="order-choise_check"/>
+                            <span class="order-choise_details">Milkshakes</span>
+                            <input  type="number" name="milshakes-number" class="portions-number"/>
+                            <span class="order-choise_portions">Portions</span>
+                        </label>
+                        <p class="warning">Your order is reserved <strong>for 24 hours; if you don't make it in by then, we'll cancel the order and refund your method of payment</strong></p>
+                        <a href="https://www.portmone.com.ua/" class="btn2 pay-btn">Pay</a>
+                        
+                    </div>
+                </form>
+            </div>
+            
+        </div>
+        <div class="mob-backdrop is-hidden" mob-data-mod>  
+            <div class="order">
+                <button type="button" class="btn-circle cross-icon cl-order-btn" mob-data-mod-close>
+                    <svg class="cross-order_icon">
+                    <use href="././images/icons/sprite.svg#close-icon"></use>
+                    </svg>
+                </button> 
+                <h2 class="order_title">Your order</h2>
+                <form class="order_form">
+                    <label class="label label-name">
+                        <input
+                            type="text"
+                            name="client-name"
+                            class="client-data"
+                            placeholder="  "
+                        />
+                        <span class="label-descr">Name</span>
+                    </label>
+                    <label class="label label-tel">
+                        <input
+                            type="tel"
+                            name="client-tel"
+                            class="client-data"
+                            placeholder=" "
+                        />
+                        <span class="label-descr">Phone</span>              
+                    </label>
+                    <label class="label label-points">
+                        <input
+                            type="text"
+                            name="points-address"
+                            class="client-data"
+                            placeholder=" "
+                        />
+                        <span class="label-descr">Pick-up Points Address</span>              
+                    </label>
+                    <p class="order_text">Make your choise:</p>
+                    <div role="group" class="order-choise">
+                                         
+                        <label class="label order-choise_label">
+                            <input  name="product" type="checkbox" value="icecream" class="order-choise_check"/>
+                            <span class="order-choise_details">Ice-cream</span>
+                            <input  type="number" name="icecream-number" class="portions-number"/>
+                            <span class="order-choise_portions">Portions</span>
+                        </label>
+                        <label class="label order-choise_label">
+                            <input  name="product" type="checkbox" value="ice_coffee" class="order-choise_check"/>
+                            <span class="order-choise_details">Ice-coffe</span>
+                            <input  type="number" name="coffee-number" class="portions-number"/>
+                            <span class="order-choise_portions">Portions</span>
+                        </label>
+                        <label class="label order-choise_label">
+                            <input  name="product" type="checkbox" value="milkshakes" class="order-choise_check"/>
+                            <span class="order-choise_details">Milkshakes</span>
+                            <input  type="number" name="milshakes-number" class="portions-number"/>
+                            <span class="order-choise_portions">Portions</span>
+                        </label>
+                        <p class="warning">Your order is reserved <strong>for 24 hours; if you don't make it in by then, we'll cancel the order and refund your method of payment</strong></p>
+                        <a href="https://www.portmone.com.ua/" class="btn2 pay-btn">Pay</a>
+                        
+                        
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
    
+  
+    
     
       
         
 
 </section>
 
+
 <script src="../menu.js"></script>
+
+<script src="../mobile-modal.js"></script>
