--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -296,3 +296,242 @@
     margin-right: 35px;
 
 }
+.backdrop,
+.mob-backdrop {
+    position: fixed;
+
+    z-index: 999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  
+    background-color: rgba(0, 0, 0, 0.2);
+  
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden,
+.mob-backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(+100%);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+    pointer-events: none;
+}
+.order {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -10%);
+  
+    width: 300px;
+    height: 90%;
+    
+
+    
+  
+    padding: 0.5%;
+  
+    background-color: $background-hero;
+  
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+   
+
+    overflow: scroll;
+
+    @media screen  and (min-width:768px) {
+        width: 480px;
+        height: 90%;
+        
+
+    }
+    @media screen  and (min-width:1200px) {
+        width: 480px;
+        height: 70%;       
+
+    }
+}
+
+
+
+.cl-order-btn {
+    position:absolute;
+    top: 0;
+    right: 0;
+
+    width: 30px;
+    height: 30px;
+
+    background-color: $text-color;
+
+    border: transparent;
+    @media screen  and (min-width:768px) {
+        width: 40px;
+        height: 40px;    
+
+    }
+}
+
+.order_title {
+    text-align: center;
+    font-family: Titan One;
+    font-weight: 400;
+    font-size: 20;
+    line-height: 1.2857;
+
+    color: $text-color-hero;
+
+    @media screen  and (min-width:768px) {
+        font-size: 30;
+        
+
+    }
+}
+.order_form {
+    width: 100%;
+
+    margin-top: 5%;
+    padding-left: 2%;
+    padding-right: 2%;
+
+    font-family: DM Sans;
+    font-weight: 400;
+    font-size: 14;
+    line-height: 1.2857;
+    letter-spacing: 0.01em;
+
+    color: $text-color-hero;
+
+}
+.label {
+    position: relative;
+  
+    display: block;
+  
+    width: 100%;
+
+    margin-bottom: 8%;
+}
+.client-data {
+    width: 100%;
+    height: 30px;
+    padding: 8px;
+  
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.label-descr {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 2%;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
+    color: $text-color;
+}
+.client-data:hover,
+.client-data:focus {
+
+    border: 2px solid $hover-botton-color;
+
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    cursor: pointer;
+}
+.label:hover .label-descr,
+.label:focus .label-descr,
+.label> .client-data:not(:placeholder-shown) + .label-descr {
+  transform: translateY(-190%);
+
+  color: $hover-text-color;
+  font-weight: 700;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.order_text {
+    text-align: center;
+    text-decoration: underline;
+    
+    font-weight: 700;
+           
+    margin-bottom: 5%;
+
+    @media screen  and (min-width:768px) {
+       font-size: 32;       
+
+    }
+
+}
+
+.order-choise {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+   
+    
+   
+
+    &_label {
+        display: flex;        
+        align-items: center;
+        justify-content: space-between;
+
+        width: 100%;
+
+        
+    }
+   
+    &_details {
+        
+        margin-left: 10px;
+
+        font-size: 18;
+
+        @media screen  and (min-width:768px) {
+            font-size: 32;       
+     
+        }
+        
+
+    }
+   
+    &_portions {
+        margin-left: 10px;
+        font-size: 18;
+
+        @media screen  and (min-width:768px) {
+            font-size: 32;       
+     
+         }
+    }
+}
+
+
+.portions-number {
+    display: inline-block;
+    width: 45px;
+}
+.order-choise_check{
+    margin-left: 10px;
+
+}
+
+.warning {
+    color: $hover-text-color;
+
+    text-align: center;
+
+    margin-bottom: 5px;
+}
+.pay-btn {
+    border:transparent;
+    font-weight: 700;
+}
+    
