--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -490,15 +490,11 @@ h6 {
 }
 
 .current,
-.nav-limk:focus span,
-.nav-link:hover span {
+.nav-limk:focus,
+.nav-link:hover {
   color: #d41443;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-limk:focus-within span {
-  color: #d41443;
 }
 
 .site-nav {
@@ -515,6 +511,228 @@ h6 {
 
 .nav-item:not(:last-child) {
   margin-right: 35px;
+}
+
+.backdrop {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  pointer-events: none;
+}
+
+.order {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -10%);
+          transform: translate(-50%, -10%);
+  width: 300px;
+  height: 90%;
+  padding: 0.5%;
+  background-color: #ffa5ba;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  overflow: scroll;
+}
+
+@media screen and (min-width: 768px) {
+  .order {
+    width: 480px;
+    height: 90%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .order {
+    width: 480px;
+    height: 70%;
+  }
+}
+
+.cl-order-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  background-color: #907e82;
+  border: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .cl-order-btn {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+.order_title {
+  text-align: center;
+  font-family: Titan One;
+  font-weight: 400;
+  font-size: 20;
+  line-height: 1.2857;
+  color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+  .order_title {
+    font-size: 30;
+  }
+}
+
+.order_form {
+  width: 100%;
+  margin-top: 5%;
+  padding-left: 2%;
+  padding-right: 2%;
+  font-family: DM Sans;
+  font-weight: 400;
+  font-size: 14;
+  line-height: 1.2857;
+  letter-spacing: 0.01em;
+  color: #ffffff;
+}
+
+.label {
+  position: relative;
+  display: block;
+  width: 100%;
+  margin-bottom: 8%;
+}
+
+.client-data {
+  width: 100%;
+  height: 30px;
+  padding: 8px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.label-descr {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 2%;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #907e82;
+}
+
+.client-data:hover,
+.client-data:focus {
+  border: 2px solid #c7133e;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+
+.label:hover .label-descr,
+.label:focus .label-descr,
+.label > .client-data:not(:placeholder-shown) + .label-descr {
+  -webkit-transform: translateY(-190%);
+          transform: translateY(-190%);
+  color: #d41443;
+  font-weight: 700;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.order_text {
+  text-align: center;
+  text-decoration: underline;
+  font-weight: 700;
+  margin-bottom: 5%;
+}
+
+@media screen and (min-width: 768px) {
+  .order_text {
+    font-size: 32;
+  }
+}
+
+.order-choise {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.order-choise_label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+
+.order-choise_details {
+  margin-left: 10px;
+  font-size: 18;
+}
+
+@media screen and (min-width: 768px) {
+  .order-choise_details {
+    font-size: 32;
+  }
+}
+
+.order-choise_portions {
+  margin-left: 10px;
+  font-size: 18;
+}
+
+@media screen and (min-width: 768px) {
+  .order-choise_portions {
+    font-size: 32;
+  }
+}
+
+.portions-number {
+  display: inline-block;
+  width: 45px;
+}
+
+.order-choise_check {
+  margin-left: 10px;
+}
+
+.pay-btn {
+  border: transparent;
+  font-weight: 700;
 }
 
 .hero {
