--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,15 +1,15 @@
 .products-container {
-  margin-top: 121px;
-  margin-bottom: 98px;
+  padding-top: 221px;
+  padding-bottom: 98px;
 
   @media screen and (min-width: 768px) {
-    margin-top: 122px;
-    margin-bottom: 112px;
+    padding-top: 122px;
+    padding-bottom: 112px;
   }
 
   @media screen and (min-width: 1200px) {
-    margin-top: 127px;
-    margin-bottom: 119px;
+    padding-top: 127px;
+    padding-bottom: 119px;
   }
 }
 
