Исправлен якорь, добавлены отступы в .menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,7 +16,7 @@
           <a href="./index.html" class="menu-nav current">Home</a>
         </li>
         <li>
-          <a href="#our-products" class="menu-nav">About us</a>
+          <a href="#about" class="menu-nav">About us</a>
         </li>
         <li>
           <a href="#how-its-made" class="menu-nav">How it’s made?</a>
