--- a/src/sass/layouts/_section-header.scss
+++ b/src/sass/layouts/_section-header.scss
@@ -73,6 +73,7 @@ header {
     left: 335px;
     height: 125px;
     width: 595px;
+    padding: 33px 0;
     display: flex;
     background: transparent;
     font-size: 16px;
