--- a/src/sass/_shops.scss
+++ b/src/sass/_shops.scss
@@ -85,6 +85,14 @@
     }
   }
 
+  @media screen and (min-width: 768px) {
+    padding-left: 31px;
+    padding-right: 31px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+  }
+
   @media screen and (min-width: 1200px) {
     width: 330px;
     padding-left: 31px;
@@ -117,6 +125,12 @@
   width: 80px;
   height: 16px;
   margin-bottom: 25px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 16px;
+    line-height: 1.86;
+    margin-bottom: 30px;
+  }
 
   @media screen and (min-width: 1200px) {
     font-weight: 500;
@@ -162,6 +176,7 @@
     font-weight: 500;
   font-size: 14px;
   line-height: 1.86;
+  margin-bottom: 14px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -181,6 +196,7 @@
   @media screen and (min-width: 768px) {
     font-size: 14px;
     line-height: 1.66;
+    padding-bottom: 30px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -231,6 +247,11 @@
   border-top-width: 1px;
   border-top-style: solid;
   border-top-color: #E1E1E1;
+
+  @media screen and (min-width: 768px) {
+    padding-bottom: 20px;
+    padding-top: 30px;
+  }
 
   @media screen and (min-width: 1200px) {
     padding-top: 32px;
