--- a/src/sass/layouts/_section-composition.scss
+++ b/src/sass/layouts/_section-composition.scss
@@ -1,12 +1,14 @@
 .visually-hidden {
     @extend %visually-hidden;
 }
+
 .composition-container {
-    @include from (desktop) {
+    @include from(desktop) {
         padding-left: 18px;
         padding-right: 0px;
     }
 }
+
 .composition {
     position: relative;
     background-color: $section-background;
@@ -106,7 +108,7 @@
 
 .composition-gap {
     width: 100%;
-    height: 73px;
+    height: 64px;
     background-color: $white-color;
     @include for-size(tablet) {
         height: 159px;
@@ -121,7 +123,7 @@
     position: absolute;
     top: 654px;
     max-width: 280px;
-    margin: 0 auto;
+    margin: 0 auto 0 -20px;
     @include for-size(tablet) {
         max-width: 700px;
         top: 370px;
