додана кнопка-посилання для оплати

--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -350,7 +350,7 @@
     }
     @media screen  and (min-width:1200px) {
         width: 480px;
-        height: 70%;       
+        height: 90%;       
 
     }
 }
@@ -405,11 +405,13 @@
 
     color: $text-color-hero;
 
+    align-items: center;
+
 }
 .label {
     position: relative;
-  
-    display: block;
+
+    display: inline-block;
   
     width: 100%;
 
@@ -474,6 +476,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
+
+    width: 280px;
+
+    margin-right: auto;
+    margin-left: auto;
    
     
    
@@ -531,7 +539,13 @@
     margin-bottom: 5px;
 }
 .pay-btn {
+
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+
     border:transparent;
     font-weight: 700;
+
 }
     
