--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -513,7 +513,8 @@ h6 {
   margin-right: 35px;
 }
 
-.backdrop {
+.backdrop,
+.mob-backdrop {
   position: fixed;
   z-index: 999;
   top: 0;
@@ -525,7 +526,8 @@ h6 {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-hidden {
+.backdrop.is-hidden,
+.mob-backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
   -webkit-transform: translateY(100%);
@@ -561,7 +563,7 @@ h6 {
 @media screen and (min-width: 1200px) {
   .order {
     width: 480px;
-    height: 70%;
+    height: 90%;
   }
 }
 
@@ -608,11 +610,14 @@ h6 {
   line-height: 1.2857;
   letter-spacing: 0.01em;
   color: #ffffff;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .label {
   position: relative;
-  display: block;
+  display: inline-block;
   width: 100%;
   margin-bottom: 8%;
 }
@@ -684,6 +689,9 @@ h6 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: 280px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .order-choise_label {
@@ -730,7 +738,17 @@ h6 {
   margin-left: 10px;
 }
 
+.warning {
+  color: #d41443;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
 .pay-btn {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   border: transparent;
   font-weight: 700;
 }
