регулює висоту модального вікна

--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -344,15 +344,9 @@
 
     @media screen  and (min-width:768px) {
         width: 480px;
-        height: 90%;
         
-
     }
-    @media screen  and (min-width:1200px) {
-        width: 480px;
-        height: 90%;       
-
-    }
+   
 }
 
 
@@ -368,6 +362,11 @@
     background-color: $text-color;
 
     border: transparent;
+    &:hover,
+    &:focus {
+        background-color: $hover-botton-color;
+       
+    }
     @media screen  and (min-width:768px) {
         width: 40px;
         height: 40px;    
@@ -546,6 +545,12 @@
 
     border:transparent;
     font-weight: 700;
+
+    &:hover,
+    &:focus {
+        background-color: $hover-botton-color;
+        color: $text-color-hero;
+    }
 
 }
     
