products-img---fix

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -187,20 +187,17 @@
 }
 
 .products-img {
-  width: 249px;
-  height: 252px;
   position: absolute;
   bottom: 346px;
-  left: 0px;
 
   @media screen and (min-width: 768px) {
-    width: 220px;
+    width: 100%;
     height: 226px;
     bottom: 363px;
   }
 
   @media screen and (min-width: 1200px) {
-    width: 337px;
+    width: 100%;
     height: 335px;
     bottom: 400px;
   }
